chore: add typescript and configure it

--- a/api/package.json
+++ b/api/package.json
@@ -2,5 +2,11 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
+  }
 }
