--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,9 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.54.0",
     "typescript": "^5.2.2"
   }
 }
