--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"build": "tsc"
+		"build": "tsc",
+		"dev": "nodemon src/index.ts"
 	},
 	"dependencies": {
 		"express": "4.18.2"
@@ -16,7 +17,9 @@
 		"eslint": "8.54.0",
 		"eslint-config-prettier": "9.0.0",
 		"eslint-plugin-prettier": "5.0.1",
+		"nodemon": "3.0.1",
 		"prettier": "3.1.0",
+		"ts-node": "10.9.1",
 		"typescript": "5.2.2"
 	}
 }
