--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
 		"dev": "nodemon src/index.ts"
 	},
 	"dependencies": {
-		"express": "4.18.2"
+		"express": "4.18.2",
+		"mongoose": "8.0.1"
 	},
 	"devDependencies": {
 		"@types/express": "4.17.21",
