--- a/api/package.json
+++ b/api/package.json
@@ -9,10 +9,12 @@
 	},
 	"dependencies": {
 		"express": "4.18.2",
-		"mongoose": "8.0.1"
+		"mongoose": "8.0.1",
+		"multer": "1.4.5-lts.1"
 	},
 	"devDependencies": {
 		"@types/express": "4.17.21",
+		"@types/multer": "1.4.10",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
 		"@typescript-eslint/parser": "6.11.0",
 		"eslint": "8.54.0",
