--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"scripts": {
 		"build": "tsc",
-		"dev": "nodemon src/index.ts"
+		"dev": "nodemon src/index.ts",
+		"start": "node dist/index.js"
 	},
 	"dependencies": {
 		"express": "4.18.2",
