chore(*): fix eslint problems

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -15,9 +15,29 @@
 	},
 	"plugins": [
 		"@typescript-eslint",
+		"eslint-plugin-import-helpers",
 		"prettier"
 	],
 	"rules": {
-		"prettier/prettier": "error"
+		"prettier/prettier": "error",
+		"import-helpers/order-imports": [
+			"warn",
+			{
+				"newlinesBetween": "always",
+				"groups": [
+					"module",
+					"/^@shared/",
+					[
+						"parent",
+						"sibling",
+						"index"
+					]
+				],
+				"alphabetize": {
+					"order": "asc",
+					"ignoreCase": true
+				}
+			}
+		]
 	}
 }
