--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
 		"@typescript-eslint/parser": "6.11.0",
 		"eslint": "8.54.0",
 		"eslint-config-prettier": "9.0.0",
+		"eslint-plugin-import-helpers": "1.3.1",
 		"eslint-plugin-prettier": "5.0.1",
 		"nodemon": "3.0.1",
 		"prettier": "3.1.0",
