--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
 	},
 	"dependencies": {
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"styled-components": "6.1.1",
+		"vite-tsconfig-paths": "4.2.1"
 	},
 	"devDependencies": {
 		"@types/react": "18.2.37",
