--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,13 @@
 		"@types/react": "18.2.37",
 		"@types/react-dom": "18.2.15",
 		"@typescript-eslint/eslint-plugin": "6.10.0",
-		"@typescript-eslint/parser": "6.10.0",
+		"@typescript-eslint/parser": "6.11.0",
 		"@vitejs/plugin-react": "4.2.0",
 		"eslint": "8.53.0",
 		"eslint-config-prettier": "9.0.0",
 		"eslint-plugin-import-helpers": "1.3.1",
 		"eslint-plugin-prettier": "5.0.1",
+		"eslint-plugin-react": "7.33.2",
 		"eslint-plugin-react-hooks": "4.6.0",
 		"eslint-plugin-react-refresh": "0.4.4",
 		"prettier": "3.1.0",
