--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,6 +1,18 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@assets/*": [
+        "src/assets/*"
+      ],
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@mocks/*": [
+        "src/mocks/*"
+      ],
+    }
   }
 }
