--- a/app/package.json
+++ b/app/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+	"name": "app",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"private": true,
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"expo": "~49.0.15",
+		"expo-status-bar": "~1.6.0",
+		"react": "18.2.0",
+		"react-native": "0.72.6",
+		"react-native-svg": "13.9.0",
+		"styled-components": "^6.1.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@types/react": "~18.2.14",
+		"@typescript-eslint/eslint-plugin": "^6.13.0",
+		"@typescript-eslint/parser": "^6.13.0",
+		"babel-plugin-module-resolver": "^5.0.0",
+		"eslint": "^8.54.0",
+		"eslint-plugin-react": "^7.33.2",
+		"typescript": "^5.1.3",
+		"eslint-config-prettier": "9.0.0",
+		"eslint-plugin-import-helpers": "1.3.1",
+		"eslint-plugin-prettier": "5.0.1",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"prettier": "3.1.0"
+	}
 }
