--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"expo": "~49.0.15",
+		"expo-font": "~11.4.0",
 		"expo-status-bar": "~1.6.0",
 		"react": "18.2.0",
 		"react-native": "0.72.6",
@@ -24,12 +25,12 @@
 		"@typescript-eslint/parser": "^6.13.0",
 		"babel-plugin-module-resolver": "^5.0.0",
 		"eslint": "^8.54.0",
-		"eslint-plugin-react": "^7.33.2",
-		"typescript": "^5.1.3",
 		"eslint-config-prettier": "9.0.0",
 		"eslint-plugin-import-helpers": "1.3.1",
 		"eslint-plugin-prettier": "5.0.1",
+		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "4.6.0",
-		"prettier": "3.1.0"
+		"prettier": "3.1.0",
+		"typescript": "^5.1.3"
 	}
 }
