--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,18 +1,21 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "strict": true,
-    "baseUrl": ".",
-    "paths": {
-      "@assets/*": [
-        "src/assets/*"
-      ],
-      "@components/*": [
-        "src/components/*"
-      ],
-      "@mocks/*": [
-        "src/mocks/*"
-      ],
-    }
-  }
+	"extends": "expo/tsconfig.base",
+	"compilerOptions": {
+		"strict": true,
+		"baseUrl": ".",
+		"paths": {
+			"~/assets/*": [
+				"src/assets/*"
+			],
+			"~/components/*": [
+				"src/components/*"
+			],
+			"~/mocks/*": [
+				"src/mocks/*"
+			],
+			"~/styles/*": [
+				"src/styles/*"
+			],
+		}
+	}
 }
