--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,6 +7,9 @@
 			"~/assets/*": [
 				"src/assets/*"
 			],
+			"~/utils/*": [
+				"src/utils/*"
+			],
 			"~/components/*": [
 				"src/components/*"
 			],
