--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -18,9 +18,7 @@
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module",
-		"project": [
-			"frontend/tsconfig.json"
-		]
+		"project": true
 	},
 	"plugins": [
 		"react",
