--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"axios": "^1.6.2",
 		"expo": "~49.0.15",
 		"expo-font": "~11.4.0",
 		"expo-status-bar": "~1.6.0",
