--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"axios": "1.6.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-toastify": "9.1.3",
 		"styled-components": "6.1.1",
 		"vite-tsconfig-paths": "4.2.1"
 	},
