--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
 	"dependencies": {
 		"express": "4.18.2",
 		"mongoose": "8.0.1",
-		"multer": "1.4.5-lts.1"
+		"multer": "1.4.5-lts.1",
+		"socket.io": "4.7.2"
 	},
 	"devDependencies": {
 		"@types/express": "4.17.21",
