--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
 		"expo-status-bar": "~1.6.0",
 		"react": "18.2.0",
 		"react-native": "0.72.6",
+		"react-native-responsive-fontsize": "^0.5.1",
 		"react-native-svg": "13.9.0",
 		"styled-components": "^6.1.1"
 	},
