--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -2,10 +2,11 @@
 	"extends": "expo/tsconfig.base",
 	"compilerOptions": {
 		"strict": true,
-		"baseUrl": ".",
+		"baseUrl": "./src/",
+		"strictPropertyInitialization": false,
 		"paths": {
 			"~/*": [
-				"src/*"
+				"./*"
 			]
 		}
 	}
