--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -7,6 +7,7 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
+		"plugin:react/recommended",
 		"plugin:react-hooks/recommended",
 		"prettier"
 	],
@@ -18,7 +19,10 @@
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module",
-		"project": true
+		"project": true,
+		"ecmaFeatures": {
+			"jsx": true
+		}
 	},
 	"plugins": [
 		"react",
@@ -28,6 +32,7 @@
 		"prettier"
 	],
 	"rules": {
+		"react/react-in-jsx-scope": "off",
 		"react-refresh/only-export-components": [
 			"warn",
 			{
@@ -63,5 +68,10 @@
 				"html": true
 			}
 		]
+	},
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
 	}
 }
