--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,10 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
+		"preview": "vite preview",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"format": "prettier --write src",
+		"format:all": "yarn lint && yarn format"
 	},
 	"dependencies": {
 		"axios": "1.6.2",
