refactor(frontend): Add client services class to handle with requests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
 		"format": "prettier --write src",
 		"format:all": "yarn lint && yarn format"
 	},
