--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -60,7 +60,13 @@
 			}
 		],
 		"@typescript-eslint/consistent-type-exports": "error",
-		"@typescript-eslint/consistent-type-imports": "error",
+		"@typescript-eslint/consistent-type-imports": [
+			"error",
+			{
+				"prefer": "type-imports",
+				"fixStyle": "inline-type-imports"
+			}
+		],
 		"react/self-closing-comp": [
 			"error",
 			{
