--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -11,7 +11,8 @@
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
-		"sourceType": "module"
+		"sourceType": "module",
+		"project": true
 	},
 	"plugins": [
 		"@typescript-eslint",
@@ -20,6 +21,14 @@
 	],
 	"rules": {
 		"prettier/prettier": "error",
+		"@typescript-eslint/consistent-type-exports": "error",
+		"@typescript-eslint/consistent-type-imports": [
+			"error",
+			{
+				"prefer": "type-imports",
+				"fixStyle": "inline-type-imports"
+			}
+		],
 		"import-helpers/order-imports": [
 			"warn",
 			{
