--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,10 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "nodemon src/index.ts",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+		"format": "prettier --write src",
+		"format:all": "yarn lint && yarn format"
 	},
 	"dependencies": {
 		"express": "4.18.2",
