--- a/api/package.json
+++ b/api/package.json
@@ -4,18 +4,23 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"build": "tsc",
-		"dev": "nodemon src/index.ts",
+		"dev": "tsx watch src/index.ts",
+		"build": "tsup src --out-dir build",
 		"start": "node dist/index.js",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
 		"format": "prettier --write src",
 		"format:all": "yarn lint && yarn format"
 	},
 	"dependencies": {
+		"@prisma/client": "5.7.0",
+		"dotenv": "16.3.1",
 		"express": "4.18.2",
-		"mongoose": "8.0.1",
 		"multer": "1.4.5-lts.1",
-		"socket.io": "4.7.2"
+		"prisma": "5.7.0",
+		"socket.io": "4.7.2",
+		"tsup": "8.0.1",
+		"tsx": "4.6.2",
+		"zod": "3.22.4"
 	},
 	"devDependencies": {
 		"@types/express": "4.17.21",
@@ -26,9 +31,7 @@
 		"eslint-config-prettier": "9.0.0",
 		"eslint-plugin-import-helpers": "1.3.1",
 		"eslint-plugin-prettier": "5.0.1",
-		"nodemon": "3.0.1",
 		"prettier": "3.1.0",
-		"ts-node": "10.9.1",
 		"typescript": "5.2.2"
 	}
 }
