--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,11 +1,18 @@
 {
-  "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "outDir": "dist"
-  }
+	"compilerOptions": {
+		"target": "ES2020",
+		"module": "commonjs",
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"strictPropertyInitialization": false,
+		"strict": true,
+		"skipLibCheck": true,
+		"outDir": "dist",
+		"baseUrl": "./",
+		"paths": {
+			"~/*": [
+				"src/*"
+			]
+		},
+	}
 }
