--- a/api/package.json
+++ b/api/package.json
@@ -9,24 +9,30 @@
 		"start": "node dist/index.js",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
 		"format": "prettier --write src",
-		"format:all": "yarn lint && yarn format"
+		"format:all": "pnpm lint && pnpm format",
+		"migrate": "drizzle-kit generate:pg",
+		"migrate:run": "pnpm tsx src/config/db/migrate.ts"
 	},
 	"dependencies": {
-		"@prisma/client": "5.7.0",
-		"dotenv": "16.3.1",
-		"express": "4.18.2",
+		"@paralleldrive/cuid2": "2.2.2",
+		"chalk": "5.3.0",
+		"drizzle-orm": "0.29.3",
 		"multer": "1.4.5-lts.1",
-		"prisma": "5.7.0",
+		"pg": "8.11.3",
 		"socket.io": "4.7.2",
-		"tsup": "8.0.1",
-		"tsx": "4.6.2",
+		"zennv": "0.1.1",
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
+		"tsup": "8.0.1",
+		"tsx": "4.6.2",
 		"@types/express": "4.17.21",
 		"@types/multer": "1.4.10",
+		"@types/node": "20.11.14",
+		"@types/pg": "8.11.0",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
 		"@typescript-eslint/parser": "6.11.0",
+		"drizzle-kit": "0.20.9",
 		"eslint": "8.54.0",
 		"eslint-config-prettier": "9.0.0",
 		"eslint-plugin-import-helpers": "1.3.1",
