--- a/api/package.json
+++ b/api/package.json
@@ -4,31 +4,34 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "tsx watch src/index.ts",
+		"dev": "tsx watch src/main.ts",
 		"build": "tsup src --out-dir build",
 		"start": "node dist/index.js",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
 		"format": "prettier --write src",
 		"format:all": "pnpm lint && pnpm format",
 		"migrate": "drizzle-kit generate:pg",
-		"migrate:run": "pnpm tsx src/config/db/migrate.ts"
+		"migrate:run": "pnpm tsx src/config/db/migrate.ts",
+		"test:unit": "vitest .spec.ts"
 	},
 	"dependencies": {
 		"@paralleldrive/cuid2": "2.2.2",
 		"chalk": "5.3.0",
 		"drizzle-orm": "0.29.3",
+		"fastify": "4.26.0",
+		"fastify-socket.io": "5.0.0",
 		"multer": "1.4.5-lts.1",
 		"pg": "8.11.3",
+		"pino": "8.17.2",
+		"reflect-metadata": "0.2.1",
 		"socket.io": "4.7.2",
+		"tsyringe": "4.8.0",
 		"zennv": "0.1.1",
 		"zod": "3.22.4",
-		"fastify": "4.26.0",
-		"pino": "8.17.2"
+		"zod-to-json-schema": "3.22.4"
 	},
 	"devDependencies": {
-		"tsup": "8.0.1",
-		"pino-pretty": "10.3.1",
-		"tsx": "4.6.2",
+		"@faker-js/faker": "8.4.0",
 		"@types/express": "4.17.21",
 		"@types/multer": "1.4.10",
 		"@types/node": "20.11.14",
@@ -40,7 +43,12 @@
 		"eslint-config-prettier": "9.0.0",
 		"eslint-plugin-import-helpers": "1.3.1",
 		"eslint-plugin-prettier": "5.0.1",
+		"pino-pretty": "10.3.1",
 		"prettier": "3.1.0",
-		"typescript": "5.2.2"
+		"tsup": "8.0.1",
+		"tsx": "4.6.2",
+		"typescript": "5.2.2",
+		"vite-tsconfig-paths": "4.3.1",
+		"vitest": "1.2.2"
 	}
 }
