--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,10 +8,16 @@
 		"noEmit": true,
 		"forceConsistentCasingInFileNames": true,
 		"strictPropertyInitialization": false,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
 		"allowJs": true,
 		"composite": true,
 		"strict": true,
 		"skipLibCheck": true,
+		"types": [
+			"node",
+			"vitest/globals"
+		],
 		"outDir": "dist",
 		"baseUrl": ".",
 		"paths": {
@@ -21,7 +27,8 @@
 		},
 	},
 	"include": [
-		"src/**/*"
+		"src/**/*",
+		"vite.config.ts",
 	],
 	"exclude": [
 		"**/node_modules/**",
