--- a/api/package.json
+++ b/api/package.json
@@ -16,10 +16,10 @@
 	},
 	"dependencies": {
 		"@paralleldrive/cuid2": "2.2.2",
-		"chalk": "5.3.0",
 		"drizzle-orm": "0.29.3",
 		"fastify": "4.26.0",
 		"fastify-socket.io": "5.0.0",
+		"fastify-type-provider-zod": "1.1.9",
 		"multer": "1.4.5-lts.1",
 		"pg": "8.11.3",
 		"pino": "8.17.2",
@@ -27,8 +27,7 @@
 		"socket.io": "4.7.2",
 		"tsyringe": "4.8.0",
 		"zennv": "0.1.1",
-		"zod": "3.22.4",
-		"zod-to-json-schema": "3.22.4"
+		"zod": "3.22.4"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "8.4.0",
@@ -38,6 +37,7 @@
 		"@types/pg": "8.11.0",
 		"@typescript-eslint/eslint-plugin": "6.11.0",
 		"@typescript-eslint/parser": "6.11.0",
+		"chalk": "5.3.0",
 		"drizzle-kit": "0.20.9",
 		"eslint": "8.54.0",
 		"eslint-config-prettier": "9.0.0",
